# PvtFactoryTestTools

FactoryTestHmi/: .gitignore  CMakeLists.txt
FactoryTestHmi/common/: common.hpp  factory_protocol.hpp  qserial_channel.hpp
FactoryTestHmi/common/protocol_core/: BlockingQueu.hpp  Channel.hpp  ProtocolCore.hpp  utils.hpp
FactoryTestHmi/config/: P39.json  P41.json
FactoryTestHmi/config/backpack/: P41.json  config.json
FactoryTestHmi/hmi/: Head.qml  Home.qml  UiFactoryTest.qml  UiFactoryTestRtTable.qml  UiTestCard.qml  UiTestPanel.qml  factory_test.hpp  home.cpp  home.h  uifactory_test_setting.hpp
FactoryTestHmi/hmi/common/: ConfigEditor.qml  FreqGauge.qml  Head.qml  Home.qml  SlideDrawer.qml  UiLineChart.qml  WaterBall.qml  uicommon.hpp  uicostom_dialog.hpp  uiutils.hpp
FactoryTestHmi/hmi/factory_aging_test/: UiAgingTest.qml  UiAgingTestCard.qml  UiAgingTestRtLog.qml
FactoryTestHmi/hmi/factory_fun_test/: UiFactoryTest.qml  UiFactoryTestSetting.qml  UiTestCard.qml
FactoryTestHmi/process/: main.cpp  test_config.cpp  test_config.hpp  test_controller.hpp  test_item.hpp  test_manage.cpp  test_manage.hpp  test_rt_model.cpp  test_rt_model.hpp
FactoryTestHmi/process/factory_aging_test/: aging_test_manage.cpp  aging_test_manage.hpp
FactoryTestHmi/process/factory_fun_test/: test_config.cpp  test_config.hpp  test_controller.hpp  test_manage.cpp  test_manage.hpp  test_rt_model.hpp
FactoryTestHmi/process/mes/: mes_service.cpp
FactoryTestHmi/resources/: resources.qrc
